--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       href="%PUBLIC_URL%/manifest.json"
       crossorigin="use-credentials"
     />
+    <link 
+    href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Baskerville&display=swap" 
+    rel="stylesheet"
+    />
     <script 
     src="https://kit.fontawesome.com/7eeba18b1a.js" 
     crossorigin="anonymous"
